src/autopas/tuning/tuningStrategy/ruleBasedTuning/parser_generated/autopas_generated_rule_syntax/RuleLanguageParser.cpp

// Generated from RuleLanguage.g4 by ANTLR 4.13.2


#include "RuleLanguageVisitor.h"

#include "RuleLanguageParser.h"


using namespace antlrcpp;
using namespace AutopasGeneratedRuleSyntax;

using namespace antlr4;

namespace {

struct RuleLanguageParserStaticData final {
  RuleLanguageParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  RuleLanguageParserStaticData(const RuleLanguageParserStaticData&) = delete;
  RuleLanguageParserStaticData(RuleLanguageParserStaticData&&) = delete;
  RuleLanguageParserStaticData& operator=(const RuleLanguageParserStaticData&) = delete;
  RuleLanguageParserStaticData& operator=(RuleLanguageParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag rulelanguageParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<RuleLanguageParserStaticData> rulelanguageParserStaticData = nullptr;

void rulelanguageParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (rulelanguageParserStaticData != nullptr) {
    return;
  }
#else
  assert(rulelanguageParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<RuleLanguageParserStaticData>(
    std::vector<std::string>{
      "program", "unsigned_val", "literal", "define_list", "variable", "expression", 
      "define", "property_value", "configuration_pattern", "configuration_order", 
      "statement", "if_statement"
    },
    std::vector<std::string>{
      "", "'\"'", "'define_list'", "'='", "','", "';'", "'*'", "'/'", "'+'", 
      "'-'", "'>'", "'<'", "'not'", "'and'", "'or'", "'('", "')'", "'define'", 
      "'['", "']'", "'>='", "'with same'", "'if'", "':'", "'endif'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "COMMENT", "WS", "Container_opt", 
      "Traversal_opt", "Load_estimator_opt", "Data_layout_opt", "Newton3_opt", 
      "Bool_val", "Configuration_property", "DIGIT", "Unsigned_val", "Double_val", 
      "Variable_name"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  rulelanguageParserStaticData = std::move(staticData);
}

}

RuleLanguageParser::RuleLanguageParser(TokenStream *input) : RuleLanguageParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

RuleLanguageParser::RuleLanguageParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  RuleLanguageParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *rulelanguageParserStaticData->atn, rulelanguageParserStaticData->decisionToDFA, rulelanguageParserStaticData->sharedContextCache, options);
}

RuleLanguageParser::~RuleLanguageParser() {
  delete _interpreter;
}

const atn::ATN& RuleLanguageParser::getATN() const {
  return *rulelanguageParserStaticData->atn;
}

std::string RuleLanguageParser::getGrammarFileName() const {
  return "RuleLanguage.g4";
}

const std::vector<std::string>& RuleLanguageParser::getRuleNames() const {
  return rulelanguageParserStaticData->ruleNames;
}

const dfa::Vocabulary& RuleLanguageParser::getVocabulary() const {
  return rulelanguageParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView RuleLanguageParser::getSerializedATN() const {
  return rulelanguageParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

RuleLanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RuleLanguageParser::StatementContext *> RuleLanguageParser::ProgramContext::statement() {
  return getRuleContexts<RuleLanguageParser::StatementContext>();
}

RuleLanguageParser::StatementContext* RuleLanguageParser::ProgramContext::statement(size_t i) {
  return getRuleContext<RuleLanguageParser::StatementContext>(i);
}


size_t RuleLanguageParser::ProgramContext::getRuleIndex() const {
  return RuleLanguageParser::RuleProgram;
}


std::any RuleLanguageParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::ProgramContext* RuleLanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, RuleLanguageParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(24);
      statement();
      setState(27); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4587524) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Unsigned_valContext ------------------------------------------------------------------

RuleLanguageParser::Unsigned_valContext::Unsigned_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleLanguageParser::Unsigned_valContext::Unsigned_val() {
  return getToken(RuleLanguageParser::Unsigned_val, 0);
}

tree::TerminalNode* RuleLanguageParser::Unsigned_valContext::DIGIT() {
  return getToken(RuleLanguageParser::DIGIT, 0);
}


size_t RuleLanguageParser::Unsigned_valContext::getRuleIndex() const {
  return RuleLanguageParser::RuleUnsigned_val;
}


std::any RuleLanguageParser::Unsigned_valContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitUnsigned_val(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::Unsigned_valContext* RuleLanguageParser::unsigned_val() {
  Unsigned_valContext *_localctx = _tracker.createInstance<Unsigned_valContext>(_ctx, getState());
  enterRule(_localctx, 2, RuleLanguageParser::RuleUnsigned_val);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    _la = _input->LA(1);
    if (!(_la == RuleLanguageParser::DIGIT

    || _la == RuleLanguageParser::Unsigned_val)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

RuleLanguageParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleLanguageParser::LiteralContext::Traversal_opt() {
  return getToken(RuleLanguageParser::Traversal_opt, 0);
}

tree::TerminalNode* RuleLanguageParser::LiteralContext::Container_opt() {
  return getToken(RuleLanguageParser::Container_opt, 0);
}

tree::TerminalNode* RuleLanguageParser::LiteralContext::Load_estimator_opt() {
  return getToken(RuleLanguageParser::Load_estimator_opt, 0);
}

tree::TerminalNode* RuleLanguageParser::LiteralContext::Data_layout_opt() {
  return getToken(RuleLanguageParser::Data_layout_opt, 0);
}

tree::TerminalNode* RuleLanguageParser::LiteralContext::Newton3_opt() {
  return getToken(RuleLanguageParser::Newton3_opt, 0);
}

RuleLanguageParser::Unsigned_valContext* RuleLanguageParser::LiteralContext::unsigned_val() {
  return getRuleContext<RuleLanguageParser::Unsigned_valContext>(0);
}

tree::TerminalNode* RuleLanguageParser::LiteralContext::Double_val() {
  return getToken(RuleLanguageParser::Double_val, 0);
}

tree::TerminalNode* RuleLanguageParser::LiteralContext::Bool_val() {
  return getToken(RuleLanguageParser::Bool_val, 0);
}


size_t RuleLanguageParser::LiteralContext::getRuleIndex() const {
  return RuleLanguageParser::RuleLiteral;
}


std::any RuleLanguageParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::LiteralContext* RuleLanguageParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 4, RuleLanguageParser::RuleLiteral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(51);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(31);
      match(RuleLanguageParser::T__0);
      setState(32);
      match(RuleLanguageParser::Traversal_opt);
      setState(33);
      match(RuleLanguageParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(34);
      match(RuleLanguageParser::T__0);
      setState(35);
      match(RuleLanguageParser::Container_opt);
      setState(36);
      match(RuleLanguageParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(37);
      match(RuleLanguageParser::T__0);
      setState(38);
      match(RuleLanguageParser::Load_estimator_opt);
      setState(39);
      match(RuleLanguageParser::T__0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(40);
      match(RuleLanguageParser::T__0);
      setState(41);
      match(RuleLanguageParser::Data_layout_opt);
      setState(42);
      match(RuleLanguageParser::T__0);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(43);
      match(RuleLanguageParser::T__0);
      setState(44);
      match(RuleLanguageParser::Newton3_opt);
      setState(45);
      match(RuleLanguageParser::T__0);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(46);
      unsigned_val();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(47);
      match(RuleLanguageParser::Double_val);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(48);
      match(RuleLanguageParser::T__0);
      setState(49);
      match(RuleLanguageParser::Bool_val);
      setState(50);
      match(RuleLanguageParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Define_listContext ------------------------------------------------------------------

RuleLanguageParser::Define_listContext::Define_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleLanguageParser::Define_listContext::Variable_name() {
  return getToken(RuleLanguageParser::Variable_name, 0);
}

std::vector<RuleLanguageParser::LiteralContext *> RuleLanguageParser::Define_listContext::literal() {
  return getRuleContexts<RuleLanguageParser::LiteralContext>();
}

RuleLanguageParser::LiteralContext* RuleLanguageParser::Define_listContext::literal(size_t i) {
  return getRuleContext<RuleLanguageParser::LiteralContext>(i);
}


size_t RuleLanguageParser::Define_listContext::getRuleIndex() const {
  return RuleLanguageParser::RuleDefine_list;
}


std::any RuleLanguageParser::Define_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitDefine_list(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::Define_listContext* RuleLanguageParser::define_list() {
  Define_listContext *_localctx = _tracker.createInstance<Define_listContext>(_ctx, getState());
  enterRule(_localctx, 6, RuleLanguageParser::RuleDefine_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(RuleLanguageParser::T__1);
    setState(54);
    match(RuleLanguageParser::Variable_name);
    setState(55);
    match(RuleLanguageParser::T__2);
    setState(56);
    literal();
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == RuleLanguageParser::T__3) {
      setState(57);
      match(RuleLanguageParser::T__3);
      setState(58);
      literal();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(RuleLanguageParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

RuleLanguageParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleLanguageParser::VariableContext::Variable_name() {
  return getToken(RuleLanguageParser::Variable_name, 0);
}


size_t RuleLanguageParser::VariableContext::getRuleIndex() const {
  return RuleLanguageParser::RuleVariable;
}


std::any RuleLanguageParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::VariableContext* RuleLanguageParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 8, RuleLanguageParser::RuleVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(RuleLanguageParser::Variable_name);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

RuleLanguageParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RuleLanguageParser::ExpressionContext *> RuleLanguageParser::ExpressionContext::expression() {
  return getRuleContexts<RuleLanguageParser::ExpressionContext>();
}

RuleLanguageParser::ExpressionContext* RuleLanguageParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<RuleLanguageParser::ExpressionContext>(i);
}

RuleLanguageParser::LiteralContext* RuleLanguageParser::ExpressionContext::literal() {
  return getRuleContext<RuleLanguageParser::LiteralContext>(0);
}

RuleLanguageParser::VariableContext* RuleLanguageParser::ExpressionContext::variable() {
  return getRuleContext<RuleLanguageParser::VariableContext>(0);
}


size_t RuleLanguageParser::ExpressionContext::getRuleIndex() const {
  return RuleLanguageParser::RuleExpression;
}


std::any RuleLanguageParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


RuleLanguageParser::ExpressionContext* RuleLanguageParser::expression() {
   return expression(0);
}

RuleLanguageParser::ExpressionContext* RuleLanguageParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  RuleLanguageParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  RuleLanguageParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, RuleLanguageParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RuleLanguageParser::T__11: {
        setState(69);
        antlrcpp::downCast<ExpressionContext *>(_localctx)->op = match(RuleLanguageParser::T__11);
        setState(70);
        expression(5);
        break;
      }

      case RuleLanguageParser::T__0:
      case RuleLanguageParser::DIGIT:
      case RuleLanguageParser::Unsigned_val:
      case RuleLanguageParser::Double_val: {
        setState(71);
        literal();
        break;
      }

      case RuleLanguageParser::Variable_name: {
        setState(72);
        variable();
        break;
      }

      case RuleLanguageParser::T__14: {
        setState(73);
        match(RuleLanguageParser::T__14);
        setState(74);
        expression(0);
        setState(75);
        match(RuleLanguageParser::T__15);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(93);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(91);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(79);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(80);
          antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == RuleLanguageParser::T__5

          || _la == RuleLanguageParser::T__6)) {
            antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(81);
          expression(9);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(82);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(83);
          antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == RuleLanguageParser::T__7

          || _la == RuleLanguageParser::T__8)) {
            antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(84);
          expression(8);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(85);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(86);
          antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == RuleLanguageParser::T__9

          || _la == RuleLanguageParser::T__10)) {
            antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(87);
          expression(7);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(88);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(89);
          antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == RuleLanguageParser::T__12

          || _la == RuleLanguageParser::T__13)) {
            antlrcpp::downCast<ExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(90);
          expression(5);
          break;
        }

        default:
          break;
        } 
      }
      setState(95);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- DefineContext ------------------------------------------------------------------

RuleLanguageParser::DefineContext::DefineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleLanguageParser::DefineContext::Variable_name() {
  return getToken(RuleLanguageParser::Variable_name, 0);
}

RuleLanguageParser::ExpressionContext* RuleLanguageParser::DefineContext::expression() {
  return getRuleContext<RuleLanguageParser::ExpressionContext>(0);
}


size_t RuleLanguageParser::DefineContext::getRuleIndex() const {
  return RuleLanguageParser::RuleDefine;
}


std::any RuleLanguageParser::DefineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitDefine(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::DefineContext* RuleLanguageParser::define() {
  DefineContext *_localctx = _tracker.createInstance<DefineContext>(_ctx, getState());
  enterRule(_localctx, 12, RuleLanguageParser::RuleDefine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(RuleLanguageParser::T__16);
    setState(97);
    match(RuleLanguageParser::Variable_name);
    setState(98);
    match(RuleLanguageParser::T__2);
    setState(99);
    expression(0);
    setState(100);
    match(RuleLanguageParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Property_valueContext ------------------------------------------------------------------

RuleLanguageParser::Property_valueContext::Property_valueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleLanguageParser::Property_valueContext::Variable_name() {
  return getToken(RuleLanguageParser::Variable_name, 0);
}

RuleLanguageParser::LiteralContext* RuleLanguageParser::Property_valueContext::literal() {
  return getRuleContext<RuleLanguageParser::LiteralContext>(0);
}


size_t RuleLanguageParser::Property_valueContext::getRuleIndex() const {
  return RuleLanguageParser::RuleProperty_value;
}


std::any RuleLanguageParser::Property_valueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitProperty_value(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::Property_valueContext* RuleLanguageParser::property_value() {
  Property_valueContext *_localctx = _tracker.createInstance<Property_valueContext>(_ctx, getState());
  enterRule(_localctx, 14, RuleLanguageParser::RuleProperty_value);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RuleLanguageParser::Variable_name: {
        enterOuterAlt(_localctx, 1);
        setState(102);
        match(RuleLanguageParser::Variable_name);
        break;
      }

      case RuleLanguageParser::T__0:
      case RuleLanguageParser::DIGIT:
      case RuleLanguageParser::Unsigned_val:
      case RuleLanguageParser::Double_val: {
        enterOuterAlt(_localctx, 2);
        setState(103);
        literal();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Configuration_patternContext ------------------------------------------------------------------

RuleLanguageParser::Configuration_patternContext::Configuration_patternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> RuleLanguageParser::Configuration_patternContext::Configuration_property() {
  return getTokens(RuleLanguageParser::Configuration_property);
}

tree::TerminalNode* RuleLanguageParser::Configuration_patternContext::Configuration_property(size_t i) {
  return getToken(RuleLanguageParser::Configuration_property, i);
}

std::vector<RuleLanguageParser::Property_valueContext *> RuleLanguageParser::Configuration_patternContext::property_value() {
  return getRuleContexts<RuleLanguageParser::Property_valueContext>();
}

RuleLanguageParser::Property_valueContext* RuleLanguageParser::Configuration_patternContext::property_value(size_t i) {
  return getRuleContext<RuleLanguageParser::Property_valueContext>(i);
}


size_t RuleLanguageParser::Configuration_patternContext::getRuleIndex() const {
  return RuleLanguageParser::RuleConfiguration_pattern;
}


std::any RuleLanguageParser::Configuration_patternContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RuleLanguageVisitor*>(visitor))
    return parserVisitor->visitConfiguration_pattern(this);
  else
    return visitor->visitChildren(this);
}

RuleLanguageParser::Configuration_patternContext* RuleLanguageParser::configuration_pattern() {
  Configuration_patternContext *_localctx = _tracker.createInstance<Configuration_patternContext>(_ctx, getState());
  enterRule(_localctx, 16, RuleLanguageParser::RuleConfiguration_pattern);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(RuleLanguageParser::T__17);
